<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_routes"
            android:icon="@drawable/ic_menu_routes"
            android:title="@string/menu_routes" />
        <item
            android:id="@+id/nav_vehicles"
            android:icon="@drawable/ic_dashboard_vehicle"
            android:title="@string/menu_vehicles" />
        <item
            android:id="@+id/nav_documents"
            android:icon="@drawable/ic_dashboard_document"
            android:title="@string/menu_documents" />
    </group>
    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_menu_profile"
                    android:title="@string/menu_profile" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_settings"
                    android:title="@string/menu_settings" />
            </group>
        </menu>
    </item>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
